maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:26: error: not found: value it
      var x = _C(it)%100
                 ^ShortestPathMaze:27: error: not found: value it
      var y = (_C(it)/100).toInt % 100
                  ^ShortestPathMaze:28: error: not found: value it
      var num = (_C(it)/10000).toInt
                    ^